@startuml class_diagram

class CoffeeRatingItem {
    -description : String
    -rating : String
}

class CoffeeRatings {
    -name : String
    -items : List<CoffeeRatingItem> 
}

class CoffeeRatingModel {
    -ratings : Collection<CoffeeRatings>
}

CoffeeRatingItem "1" -- "*" CoffeeRatings
CoffeeRatings "1" -- "*" CoffeeRatingModel

@enduml
